# Endianess_cpp

./: .travis.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
